# godot-fastmcp

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/godot_mcp/: __init__.py  __main__.py  config.py  server.py
src/godot_mcp/classdata/: loader.py
src/godot_mcp/parsers/: gdscript.py  project_config.py  tscn.py  values.py
src/godot_mcp/prompts/: templates.py
src/godot_mcp/resources/: classref.py  project.py
src/godot_mcp/tools/: classdata.py  project.py  resource.py  scene.py  script.py
tests/: conftest.py
tests/fixtures/: project.godot  sample_resource.tres  sample_script.gd  simple_scene.tscn
tests/test_parsers/: test_project_config.py  test_tscn.py  test_values.py
tests/test_tools/: test_project_tools.py  test_scene_tools.py
