[project]
name = "godot-mcp"
version = "0.1.0"
description = "MCP server for Godot 4 game engine projects"
readme = "README.md"
authors = [
    { name = "Ryan L", email = "ryanleland@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "gdtoolkit>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
godot-mcp = "godot_mcp:main"
generate-classdata = "godot_mcp.classdata.loader:_generate_cli"

[project.entry-points."mcp.servers"]
godot = "godot_mcp:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["godot_mcp"]
omit = ["src/godot_mcp/classdata/data/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
